Ensure images in ImgHolder are centrally aligned

--- a/src/styles/components/_imgHolder.scss
+++ b/src/styles/components/_imgHolder.scss
@@ -5,5 +5,6 @@ $imgHolder-size: 200px;
 	height: $imgHolder-size;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center center;
 	box-shadow: $_shadow;
 }
